@@ -1,32 +1,9 @@
+// Autogenerated from MonoDevelop.XmlEditor.addin.xml
+
 using System.Reflection;
-using System.Runtime.CompilerServices;
 
-// Information about this assembly is defined by the following
-// attributes.
-//
-// change them to the information which is associated with the assembly
-// you compile.
-
-[assembly: AssemblyTitle("MonoDevelop XML Editor")]
-[assembly: AssemblyDescription("An XML Editor for MonoDevelop")]
-[assembly: AssemblyConfiguration("")]
-[assembly: AssemblyCompany("")]
-[assembly: AssemblyProduct("")]
-[assembly: AssemblyCopyright("(C) 2005-2007 Matthew Ward")]
-[assembly: AssemblyTrademark("")]
-[assembly: AssemblyCulture("")]
-
-// The assembly version has following format :
-//
-// Major.Minor.Build.Revision
-//
-// You can specify all values by your own or you can build default build and revision
-// numbers with the '*' character (the default):
-
-[assembly: AssemblyVersion("0.6")]
-
-// The following attributes specify the key for the sign of your assembly. See the
-// .NET Framework documentation for more information about signing.
-// This is not required, if you don't want signing let these attributes like they're.
-[assembly: AssemblyDelaySign(false)]
-[assembly: AssemblyKeyFile("")]
+[assembly: AssemblyProduct ("MonoDevelop")]
+[assembly: AssemblyTitle ("XML Editor")]
+[assembly: AssemblyCopyright ("LGPL")]
+[assembly: AssemblyVersion ("1.9.1")]
+[assembly: AssemblyDescription ("XML Editor")]
